Update version to 0.9.0-rc.cyborg-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>org.mule.connectors</groupId>
     <artifactId>mule-sockets-connector</artifactId>
     <packaging>mule-extension</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.9.0-rc.cyborg-SNAPSHOT</version>
 
     <name>Sockets Connector</name>
     <description>A Mule extension that provides functionality to manage TCP and UDP connections</description>
